--- a/src/styles/listarProducao.css
+++ b/src/styles/listarProducao.css
@@ -85,31 +85,37 @@
   }
 }
 
-/* ✅ Estilização do botão "por período" */
 .periodo-button {
-  width: 140px;
-  height: 38px;
-  border-radius: 50px;
-  border: 0px solid;
-  border-image: linear-gradient(to right, #999999, #cccccc, #999999) 1;
-  background: transparent;
-  padding: 5px;
-  gap: 10px;
+  width: 100%;
+  height: 100%;
+  padding: 0 10px;
   font-family: "Roboto Slab", serif;
   font-weight: 700;
   font-size: 16px;
+  border: 1px solid;
   color: #3b447b;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  border-radius: 50px;
+  background: transparent;
   cursor: pointer;
-  transition: background 0.3s ease-in-out, color 0.3s ease-in-out;
+  appearance: none;
+  text-align: center;
 }
 
 /* ✅ Efeito hover */
 .periodo-button:hover {
   background: #3b447b;
   color: white;
+}
+
+/* Chrome, Safari, Edge */
+.periodo-button::-webkit-calendar-picker-indicator {
+  opacity: 0;
+  display: none;
+}
+
+/* Firefox */
+.periodo-button::-moz-focus-inner {
+  border: 0;
 }
 
 /* ✅ Linha separadora abaixo do status filter */
@@ -132,6 +138,7 @@
 .btn-producao {
   display: flex;
   gap: 10px;
+  padding-left: 725px;
 }
 
 .btn-detalhes {
@@ -148,6 +155,7 @@
   align-items: center;
   justify-content: center;
   gap: 10px;
+  width: 200px;
 }
 
 .btn-detalhes:hover {
@@ -164,7 +172,7 @@
   height: 26px;
   font-family: "Roboto Slab", serif;
   font-weight: 700;
-  font-size: 20px;
+  font-size: 17px;
   line-height: 26.38px;
   color: #999999;
   cursor: pointer;
