--- a/src/styles/produto.css
+++ b/src/styles/produto.css
@@ -89,6 +89,13 @@
   position: relative;
 }
 
+.motorista-titulo {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  justify-content: center;
+}
+
 /* ✅ Input do campo de pesquisa */
 .produtos-form input {
   width: 100%;
